@@ -1,4 +1,4 @@
-.Dd February 22, 2010
+.Dd June 27, 2010
 .Dt libfdatetime 3
 .Os libfdatetime
 .Sh NAME
@@ -69,13 +69,12 @@ To have other code to determine if libfdatetime was compiled with wide character
  in libfdatetime/features.h.
 
 .Sh BUGS
-Please report bugs of any kind to <forensics@hoffmannbv.nl> or on the project website:
+Please report bugs of any kind to <jbmetz@users.sourceforge.net> or on the project website:
 http://libfdatetime.sourceforge.net/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright (c) 2010, Joachim Metz <jbmetz@users.sourceforge.net>.
-Copyright 2009-2010 Joachim Metz, Hoffmann Investigations <forensics@hoffmannbv.nl> and contributors.
+Copyright (c) 2009-2010, Joachim Metz <jbmetz@users.sourceforge.net>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 the libfdatetime.h include file
